# llm-cost-autopilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
backend/analysis/: prompt_analyzer.py
backend/api/: dependencies.py  main.py  paths.py
backend/chat/: service.py
backend/classifier/: complexity_classifier.py
backend/config/: models.yaml  routing.yaml  settings.py  verification.yaml
backend/database/: base.py  models.py
backend/events/: bus.py  subscribers.py  types.py
backend/learning/: cost_metrics.py  detector.py  generator.py  rules.py  service.py
backend/providers/: anthropic_provider.py  base.py  circuit_breaker.py  executor.py  factory.py  gemini_provider.py  groq_provider.py  manager.py  mistral_provider.py  mock_provider.py  nvidia_nim_provider.py  ollama_provider.py  openai_protocol_provider.py  openai_provider.py  openrouter_provider.py  retry.py
backend/routing/: config.py  config_loader.py  context.py  engine.py  explanation.py  policy.py  strategies.py
backend/services/: analytics_service.py  cost_estimator.py  credential_store.py  dashboard_repository.py  dashboard_service.py  model_registry.py
backend/telemetry/: logging.py
backend/templates/: analytics.html  base.html  dashboard.html  providers.html
backend/tests/: test_analytics_router.py  test_analytics_service.py  test_anthropic_provider.py  test_base_provider.py  test_benchmarks.py  test_database.py  (+58 more)
benchmarks/: README.md  report.md  run_benchmarks.py
docs/: ARCHITECTURE.md  RELEASE_NOTES.md
(+45 files in other folders)
