[project]
name = "llm-cost-autopilot"
version = "0.9.1"
description = "Intelligent cost-aware routing layer for multiple LLM providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.2",
    "openai>=1.54.0",
    "jinja2>=3.1.4",
    "cryptography>=43.0.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
